--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -10,7 +10,8 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  build:
+  build_and_run:
+    name: Build and run
 
     runs-on: ubuntu-latest
 
@@ -20,5 +21,7 @@ jobs:
       run: cargo build --release --verbose
     - name: Run tests
       run: cargo test --verbose
+    - name: Run clippy
+      run: cargo clippy -- -D clippy::all -D clippy::pedantic
     - name: Run solutions
       run: cargo run --release
