--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,11 @@
 [package]
 name = "advent_of_code_2021"
-version = "0.1.0"
+version = "0.0.1"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[dev-dependencies]
+criterion = {version="0.3.5", features=["html_reports"]}
 
-[dependencies]
+[[bench]]
+name = "aoc_bench"
+harness = false
