--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,8 +3,14 @@ name = "advent_of_code_2021"
 version = "0.0.1"
 edition = "2021"
 
+[features]
+with-rayon = []
+
 [dev-dependencies]
 criterion = {version="0.3.5", features=["html_reports"]}
+
+[dependencies]
+rayon = "1.5.1"
 
 [[bench]]
 name = "aoc_bench"
