--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ criterion = {version="0.3.5", features=["html_reports"]}
 
 [dependencies]
 rayon = "1.5.1"
+hex = "0.4.3"
 
 [[bench]]
 name = "aoc_bench"
