--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ criterion = {version="0.3.5", features=["html_reports"]}
 rayon = "1.5.1"
 hex = "0.4.3"
 regex = "1.5.4"
+serde_json = "1.0.73"
 
 [[bench]]
 name = "aoc_bench"
